# SistemaPerdaoFaltas

./: README.md  pyproject.toml
backend/: .env  db.sqlite3
backend/api/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_absence_is_absent.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: AbsenceList.jsx  AbsenceRow.jsx  AbsenceTable.jsx  Form.jsx  Header.jsx  Navbar.jsx  ProtectedRoute.jsx  ProtectedRoutes.jsx  Requests.jsx  jduisf
frontend/src/features/: authSlice.js
frontend/src/pages/: AbsencesAluno.jsx  AbsencesProfessor.jsx  DashboardAdminProfessor.jsx  Home.jsx  Login.jsx  NotFound.jsx  Register.jsx  RequestsAluno.jsx  RequestsProfessor.jsx  RequestsProfessorDetail.jsx
frontend/src/services/: absenceService.js
frontend/src/styles/: LoadingIndicator.css
frontend/src/utils/: authHelpers.js
