[tool.poetry]
name = "sistema-perdao-faltas"
version = "0.1.0"
description = ""
authors = ["guguRamos <batista.gustavo@aluno.ifsp.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
